# proxy-verifier

./: CMakeLists.txt  CMakePresets.json  README.md
docker/alpine_3.20/: Dockerfile
docker/rockylinux_10/: Dockerfile
docker/rockylinux_8/: Dockerfile
docker/rockylinux_9/: Dockerfile
docker/ubuntu_24.04/: Dockerfile
src/: CMakeLists.txt
src/client/: verifier-client.cc
src/core/: Localizer.cc  Localizer.h  ProxyVerifier.cc  ProxyVerifier.h  YamlParser.cc  YamlParser.h  http.cc  http.h  http2.cc  http3.cc  https.cc  https.h
src/server/: verifier-server.cc
tests/autests/: pyproject.toml
tests/autests/gold_tests/autest-site/: directive_engine.py  proxy_http1.py  proxy_http2.py  proxy_http3.py  replay_gen.test.ext
tests/autests/gold_tests/connect_tunnel/: connect_tunnel.test.py
tests/autests/gold_tests/replay_gen/: replay_gen.test.py
tests/autests/gold_tests/request_absence/: request_absence.test.py
tests/autests/gold_tests/request_absence/replay_files/: http1_cache_hit.yaml  http1_explicit_response.yaml  http1_present_cache_hit.yaml  http1_present_success.yaml  http1_unspecified_cache_hit.yaml  http1_violation.yaml  http2_violation.yaml  missing_server_response.yaml
tests/autests/gold_tests/sigint_shutdown/: sigint_shutdown.test.py  verify_sigint_shutdown.py
tests/autests/gold_tests/status_verification/: status_verification.test.py
tests/autests/gold_tests/status_verification/replay_files/: status_verification.yaml
tools/: build-library-dependencies.sh  build-portable-binaries  remap-config-to-url-list.py  replay-gen.py
(+5 files in other folders)
