# @file
#
# Copyright 2026, Verizon Media
# SPDX-License-Identifier: Apache-2.0
#

[project]
name = "proxy-verifier-autests"
version = "0.1.0"
description = "AuTest dependencies for Proxy Verifier"
requires-python = ">=3.10"

dependencies = [
  "aioquic==1.3.0",
  "autest",
  "eventlet",
  "h2",
  "psutil",
  "pyOpenSSL",
  "ruamel_yaml",
]

[project.optional-dependencies]
dev = [
  "pyflakes",
]
